# karton-pdf-analyzer

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/: __init__.py  __main__.py  __version__.py  pdf_analyzer.py
